@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.3.29-cur, done by cs@nop.
--;-;-;2022-03-29 13:25:31, took 00:07:28, with 100 workers, on 2780 cases, 0 failed, 0 traces, 10 retries
+-;-;-;2022-03-29 13:56:04, took 00:07:28, with 100 workers, on 2780 cases, 0 failed, 0 traces, 4 retries
 -;-;-;./rtr.bin
 http://sources.freertr.net/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.freertr.net/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
