@@ -2778,6 +2778,8 @@ qc pass: socks4 server
 qc pass: socks5 server
 qc pass: tacacs server
 qc pass: udp forwarder server
+todo: aliases with sticky parameters
+todo: disableable door code in temper
 todo: quic
 todo: update gtp stack to the latest standards
 todo: p4dpdk multiseg rx/tx loop
