@@ -12,7 +12,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.3.29-cur, done by cs@nop.<br/>
-tested: 2022-03-29 13:25:31, took 00:07:28, with 100 workers, on 2780 cases, 0 failed, 0 traces, 10 retries<br/>
+tested: 2022-03-29 13:56:04, took 00:07:28, with 100 workers, on 2780 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
